<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_random_call_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RandomCall">

    <org.webrtc.SurfaceViewRenderer
        android:id="@+id/remote_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/meeting_id_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        tools:text="MeetingID"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <org.webrtc.SurfaceViewRenderer
        android:id="@+id/local_view"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:elevation="16dp"
        app:layout_constraintBottom_toTopOf="@id/controls"
        app:layout_constraintStart_toStartOf="@id/controls" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/remote_view_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/curve_background"
        android:backgroundTint="@android:color/secondary_text_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/mic_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="12dp"
            android:background="@drawable/circle_background"
            app:backgroundTint="@color/cardview_dark_background"
            app:srcCompat="@drawable/ic_baseline_mic_24"
            android:contentDescription="@string/mic_button" />
        <ImageView
            android:id="@+id/video_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="12dp"
            android:background="@drawable/circle_background"
            app:backgroundTint="@color/cardview_dark_background"
            app:srcCompat="@drawable/ic_baseline_videocam_24"
            android:contentDescription="@string/local_video_button" />
        <ImageView
            android:id="@+id/end_call_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="12dp"
            android:background="@drawable/circle_background"
            app:backgroundTint="@android:color/holo_red_dark"
            app:srcCompat="@drawable/ic_baseline_call_end_24"
            android:contentDescription="@string/end_call_button" />
        <ImageView
            android:id="@+id/switch_camera_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="12dp"
            android:background="@drawable/circle_background"
            app:backgroundTint="@color/cardview_dark_background"
            app:srcCompat="@drawable/ic_baseline_cameraswitch_24"
            android:contentDescription="@string/camera_switch_button" />
        <ImageView
            android:id="@+id/audio_output_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="16dp"
            android:padding="12dp"
            android:background="@drawable/circle_background"
            app:backgroundTint="@color/cardview_dark_background"
            app:srcCompat="@drawable/ic_baseline_speaker_up_24"
            android:contentDescription="@string/audio_output_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>