<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.WelcomeFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/selected_call_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:text="@string/selected_call"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/random_call_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/random_call"
        app:layout_constraintBottom_toTopOf="@id/selected_call_button"
        app:layout_constraintStart_toStartOf="@id/selected_call_button"
        app:layout_constraintEnd_toEndOf="@id/selected_call_button" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/random_chat_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/random_chat"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/selected_call_button"
        app:layout_constraintEnd_toEndOf="@id/selected_call_button"
        app:layout_constraintBottom_toTopOf="@id/random_call_button" />
    <ImageView
        android:id="@+id/image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="App Icon"
        android:src="@drawable/anonycall_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169" />

    <TextView
        android:id="@+id/textview_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Xin chào User!!!"/>



</androidx.constraintlayout.widget.ConstraintLayout>